# TLI-TELEGRAM-BOT

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.py  tli.ini.sample
api/: main.py  router.py  utils.py
client/: api.py
tlibot/: __main__.py  bot_config.py  filters.py  utils.py
tlibot/auth/: users.py
tlibot/plugins/: core.py
