[tool.poetry]
name = "tli-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Enes Kılıçarslan <enesklcarslan@gmail.com>"]
readme = "README.md"
packages = [{include = "tli_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.99"
tgcrypto = "^1.2.5"
requests = "^2.28.2"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.247"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
