[tool.poetry]
name = "tli-telegram-bot"
version = "0.1.0"
description = "Turkey Learning Initiative Telegram Bot"
authors = ["Enes Kılıçarslan <enesklcarslan@gmail.com>", "Ahmet Burak <ahmetbozyurtt@gmail.com>"]
readme = "README.md"
packages = [{include = "tlibot"}]

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.99"
tgcrypto = "^1.2.5"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.247"
pre-commit = "^3.0.4"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 88
exclude = '.venv'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.poetry.scripts]
bot = "tlibot.__main__:main"
api = "api.main:main"
